--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -42,6 +42,14 @@ hr {
   padding-right: 10px
 }
 
+@media screen and (max-width: 420px) {
+  .redbar {
+    padding-left: 10px;
+    padding-right: 10px;
+    width: inherit;
+  }
+}
+
 /* --- HEADER --- */
 
 header {
